Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-87563

Failure to parse oplog entries should be less disruptive

    • Replication
    • Fully Compatible
    • v8.0, v7.3, v7.0
    • Repl 2024-04-15, Repl 2024-04-29
    • 145

      Currently if we fail to parse an oplog entry when trying to check out a session, that command will fail as will all subsequent checkouts of the session. This means that on downgrade, sessions referencing oplog entries from future versions may become unusable and the user/driver will have to discard them.

      Instead, failure to parse should leave the session in the same state as if the oplog entry could not be found (incomplete transaction history), meaning retries of pre-downgrade transactions will fail and newer transactions will succeed.

            Assignee:
            matthew.russotto@mongodb.com Matthew Russotto
            Reporter:
            matthew.russotto@mongodb.com Matthew Russotto
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: