SERVER-87563 Failure to parse oplog entries should be less disruptive

GitOrigin-RevId: 37af26182ed975bccb17420781951bcc396a763f